--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,37 @@
 
+server:
+  port: 8080
+  servlet:
+    encoding:
+      charset: UTF-8
+      force: true
+  shutdown: graceful
+
+spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+    username: sa
+    password:
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+
+
+openapi:
+  kakao:
+    url: https://dapi.kakao.com/v2/local/search/keyword.json
+    api-key: KakaoAK 332bb307e35d65b793cdeac9e3de85a7
+  naver:
+    url: https://openapi.naver.com/v1/search/local.json
+    client-id: gWm0ElB1RX6DAjcxGfQ8
+    client-secret: v5sxoZKdW6
