--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,3 @@
-
 server:
   port: 8080
   servlet:
@@ -26,12 +25,25 @@ spring:
       ddl-auto: create
     show-sql: true
 
-
+common:
+  html-regex: <(/)?([a-zA-Z]*)(\\s[a-zA-Z]*=[^>]*)?(\\s)*(/)?>
 openapi:
   kakao:
     url: https://dapi.kakao.com/v2/local/search/keyword.json
     api-key: KakaoAK 332bb307e35d65b793cdeac9e3de85a7
+    place:
+      objects: documents
+      name: place_name
+      address: address_name
+      address-road: road_address_name
+    search-count: 5
   naver:
     url: https://openapi.naver.com/v1/search/local.json
     client-id: gWm0ElB1RX6DAjcxGfQ8
     client-secret: v5sxoZKdW6
+    place:
+      objects: items
+      name: title
+      address: address
+      address-road: roadAddress
+    search-count: 5
